Wrap service.get methods with response model